# vantage

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  render.yaml
app/: main.py  schemas.py  state.py
scripts/: evaluate_all_agents.py  evaluate_bandit_agents.py  evaluate_linucb.py  generate_ground_truth.py  new_evaluate_all_agents.py  visualize_demand.py
src/vantage/: __init__.py  schemas.py
src/vantage/agents/: __init__.py  bandit_agents.py  linucb_agent.py  thompson_sampling.py
src/vantage/tools/: __init__.py  optimization.py  simulator.py
tests/: test_api.py  test_bandit_agents.py  test_linucb_agent.py  test_optimization.py  test_simulator.py  test_thompson_sampling.py
