[project]
name = "vantage"
version = "0.1.0"
description = "Contextual Bandit Pricing Simulator and Online Learning Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.6.0",
    "typer>=0.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
vantage = "vantage.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vantage"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.pyright]
extraPaths = ["."]

